# llm-training

./: .gitignore  LICENSE  main.py  pyproject.toml  requirements.txt
deepspeed/: ds_z3_config.json
reward_model/benchmark_test/reward_bench/: README.md  reward_bench2_eval.py  reward_bench_eval.py  run_analysis.py
reward_model/benchmark_test/reward_bench/figures/: error_cases.txt
reward_model/cloud/: README.md  cloud_infer_start.sh  cloud_vllm_api.py  multi_process_reason_for_vllm.py  train_sft1.py  train_sft1.sh  train_sft2.sh  utils.py  数据处理_权重重组.ipynb
reward_model/cloud/data/: skyword_original_critique_sample.json  skyword_selfgen_critique_sample.json
reward_model/model/base_reward/: README.md  train.py  train.sh  train_args.json  train_data.py  杂记.ipynb
reward_model/model/cloud/: README.md  arguments.py  cloud_infer_start.sh  cloud_ray_api.py  prompt.py  train_sft1.py  train_sft1.sh  train_sft2.py  train_sft2.sh  数据处理_权重重组.ipynb
